# Python-Rust-Sample

./: .gitignore  Cargo.toml  README.md  pyproject.toml  pyrefly.toml  ruff.toml
.cargo/: config.toml
python/python-rust/: __init__.py
python/python_rust/: __init__.py  __init__.pyi  fibonacci.py  fibonacci.pyi  python_rust.cp314-win_amd64.pyd  python_rust.pyi
src/: lib.rs
tests/: test_bindings.py  test_fibonacci.rs
