[project]
name = "python-rust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"  # Pythonコードがある場合

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
]