[project]
name = "python_rust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "pyrefly",
]

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "python_rust.python_rust"

[tool.pyrefly]
python-version = "3.14"
import-roots = ["python"]
type-checking-mode = "basic"

[dependency-groups]
dev = [
    "pyrefly>=0.46.1",
    "pytest>=9.0.2",
]
